--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Hello React</title>
+    <title>MNIST Viewer</title>
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
